fix(payments): coupon Component Overlap (#11505)
fix(payments): coupon Component Overlap
## Because

- We want the components to not overlap depending on browser/device/language

## This pull request

- refactors templates and updates css to prevent components from floating over each other

## Issue that this pull request solves

Closes: #11481 , #11437 , #11438 , #11440

--- a/packages/fxa-payments-server/src/components/PlanDetails/index.scss
+++ b/packages/fxa-payments-server/src/components/PlanDetails/index.scss
@@ -40,17 +40,49 @@
   margin: 32px 0;
   padding: 0;
 
-  @include max-width('tablet') {
-    grid-row: 2/3;
-    margin-top: 0;
-  }
-
   @include min-width('tablet') {
+    display: flex;
+    flex-direction: column;
+    height: 0px;
     grid-row: auto;
     padding: 0;
   }
 
-  @media (orientation: landscape) and (max-width: 844px) {
+  @media (min-width: 1024px) {
+    display: flex;
+    flex-direction: column;
+    height: 0px;
+    grid-row: auto;
+    padding: 0;
+  }
+
+  @include max-width('tablet') {
+    border-radius: 0 0 8px 8px;
+    margin: 0 16px 0 16px;
+    grid-row: 2/3;
+
+    .container.plan-details-component-card {
+      border-radius: 0 0 8px 8px;
+      box-shadow: 0 -1px white, 0 1px white,
+        -2px 2px 2px -2px rgba(12, 12, 13, 0.1),
+        2px 2px 2px -2px rgba(12, 12, 13, 0.1);
+    }
+  }
+
+  @media (orientation: landscape) and (max-width: 927px) and (max-height: 429px) {
+    border-radius: 0 0 8px 8px;
+    margin: 0 16px 0 16px;
+    grid-row: 2/3;
+
+    .container.plan-details-component-card {
+      border-radius: 0 0 8px 8px;
+      box-shadow: 0 -1px white, 0 1px white,
+        -2px 2px 2px -2px rgba(12, 12, 13, 0.1),
+        2px 2px 2px -2px rgba(12, 12, 13, 0.1);
+    }
+  }
+
+  @media (orientation: portrait) and (max-height: 927px) and (max-width: 429px) {
     border-radius: 0 0 8px 8px;
     margin: 0 16px 0 16px;
     grid-row: 2/3;
@@ -66,7 +98,7 @@
   .plan-details-component-inner {
     @include min-width('tablet') {
       max-width: 327px;
-      position: fixed;
+      // position: fixed;
     }
   }
 
