--- a/packages/fxa-payments-server/src/routes/Product/SubscriptionCreate/index.scss
+++ b/packages/fxa-payments-server/src/routes/Product/SubscriptionCreate/index.scss
@@ -12,6 +12,16 @@
     box-shadow: 0px 1px 4px 0px rgba(12, 12, 13, 0.1);
     border-radius: 8px;
   }
+
+  @media (orientation: landscape) and (max-width: 927px) and (max-height: 429px) {
+    box-shadow: 0px 1px 4px 0px rgba(12, 12, 13, 0.1);
+    border-radius: 8px;
+  }
+
+  @media (orientation: portrait) and (max-width: 429px) and (max-height: 927px) {
+    box-shadow: 0px 1px 4px 0px rgba(12, 12, 13, 0.1);
+    border-radius: 8px;
+  }
 }
 
 .subscription-title + .product-payment {
@@ -21,8 +31,11 @@
     grid-row: 4/5;
   }
 
-  @media (orientation: landscape) and (max-width: 844px) {
-    // border-radius: 8px 8px 0 0;
+  @media (orientation: landscape) and (max-width: 927px) and (max-height: 429px) {
+    grid-row: 4/5;
+  }
+
+  @media (orientation: portrait) and (max-width: 429px) and (max-height: 927px) {
     grid-row: 4/5;
   }
 }
@@ -41,7 +54,13 @@
     min-height: 100%;
   }
 
-  @media (orientation: landscape) and (max-width: 844px) {
+  @media (orientation: landscape) and (max-width: 927px) and (max-height: 429px) {
+    grid-row: 4/5;
+    margin: 24px 16px;
+    min-height: 100%;
+  }
+
+  @media (orientation: portrait) and (max-width: 429px) and (max-height: 927px) {
     grid-row: 4/5;
     margin: 24px 16px;
     min-height: 100%;
